# Termion

./: .gitignore  AGENTS.md  ARCHITECTURE_OVERVIEW.md  Cargo.toml  Cross.toml  DECISIONS.md  LICENSE  Makefile  README.md  WORK_PLAN.md  WORK_PROGRESS.md  build.rs
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/notepads/fix-overview-throughput/: decisions.md  issues.md  learnings.md  summary.md
.sisyphus/notepads/promethion-channel-map/: COMPLETION_SUMMARY.md  decisions.md  issues.md  learnings.md
.sisyphus/notepads/update-tui-spec/: decisions.md  learnings.md
.sisyphus/plans/: channel-map-scrolling.md  fix-overview-throughput.md  promethion-channel-map.md
dev/: README.md
dev/scripts/: sim_manager.py
docs/: TUI_QA_CHECKLIST.md
learning/: PHASE_1_CLIENT.md  PHASE_2_TUI.md  PHASE_3_CLI.md  PHASE_4_TESTING.md  README.md
proto/minknow_api/: acquisition.proto  analysis_configuration.proto  analysis_workflows.proto  basecaller.proto  data.proto  debug.proto  device.proto  log.proto  manager.proto  minion_device.proto  notifications.proto  pebble_device.proto  promethion_device.proto  protocol.proto  read_end_reason.proto  report_data.proto  rpc_options.proto  run_until.proto  statistics.proto
specs/: SPEC_CLI.md  SPEC_CLIENT.md  SPEC_CONFIG.md  SPEC_TESTING.md  SPEC_TUI.md
src/: lib.rs  logging.rs  main.rs  proto.rs
src/cli/: exit.rs  list.rs  mod.rs  status.rs
src/client/: error.rs  mod.rs  position.rs  types.rs
src/config/: mod.rs  types.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
(+2 files in other folders)
