[package]
name = "termion"
version = "0.1.1"
edition = "2021"
authors = ["Termion Contributors"]
description = "A showcase-quality TUI for monitoring MinKNOW nanopore sequencing runs"
license = "MIT"
repository = "https://github.com/your-org/termion"
keywords = ["nanopore", "minknow", "tui", "sequencing", "bioinformatics"]
categories = ["command-line-utilities", "science"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"

# TUI (Phase 2)
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
futures = "0.3"
rand = "0.9"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "termion"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
doctest = false
